Fixed bug with visible page on background of popup

--- a/public_html/profiles/os2web/modules/os2web/os2web_eu_cookie_compliance/css/eu-cookie-compliance-popup.css
+++ b/public_html/profiles/os2web/modules/os2web/os2web_eu_cookie_compliance/css/eu-cookie-compliance-popup.css
@@ -92,6 +92,7 @@ body.eu-cookie-compliance-popup-open {
     background: transparent !important;
     top: auto !important;
     bottom: 0;
+    position: fixed;
 }
 
 .eu-cookie-compliance-popup-closed #sliding-popup.sliding-popup-popup {
